# roo-code-assistant-v1

./: .roomodes  OPENCODE.md  opencode.json
.opencode/.swarn/specs/: BOARD.md  CONTRACTS.md  ORCHESTRATOR_PROTOCOL.md
.opencode/.swarn/states/: swarm_state.json
.opencode/.swarn/workflows/: default_swarm_auto_runner.js
.opencode/agents/: m0-bootstrapper.md  m1-system-analyst.md  m2-business-analyst.md  m3-architect.md  m4-qa-engineer.md  m5-code-generator.md  m6-devops.md  orchestrator.md
.opencode/prompts/: application_requirement_prompt.md  swarm_master_prompt.md
.swarm_pydantic_fast/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.swarm_pydantic_fast/app/: config.py  main.py
.swarm_pydantic_fast/app/agents/: m0_bootstrapper.py  m1_system_analyst.py  m2_business_analyst.py  m3_architect.py  m4_qa_engineer.py  m5_code_generator.py  m6_devops.py  registry.py  tools.py
.swarm_pydantic_fast/app/api/: routes.py  websocket.py
.swarm_pydantic_fast/app/cli/: commands.py
.swarm_pydantic_fast/app/engine/: memory.py  orchestrator.py  validator.py  workflow.py
.swarm_pydantic_fast/app/models/: contracts.py  results.py  state.py
.swarm_pydantic_fast/swarn_templates/states/: default_state.json
.swarm_template/: README.md  SETUP.md
.swarm_template/.swarn/scripts/: m0_bootstrapper.js
.swarm_template/.swarn/specs/: ARCHITECTURE.md  PROJECT_MANIFEST.md
.swarm_template/.swarn/states/: swarm_flow_orchestrator.js
.swarm_template/app_result/: MEMORY.md
